crates/tests/src/snapshots/fe_compiler_tests__compile_errors__invalid_tuple_field.snap
---
source: tests/src/compile_errors.rs
expression: "error_string(&path, &src)"

---
error: No field `item5` exists on this tuple
  ┌─ fixtures/compile_errors/invalid_tuple_field.fe:5:14
  │
5 │     self.val.item5
  │              ^^^^^ unknown field
  │
  = Note: The highest possible field for this tuple is `item1`


